tests/ui/associated-types/associated-type-macro.rs
fn main() {
    #[cfg(FALSE)]
    <() as module>::mac!(); //~ ERROR macros cannot use qualified paths
}
